--- a/tth-client/src/app/shared/header/header.component.html
+++ b/tth-client/src/app/shared/header/header.component.html
@@ -8,8 +8,8 @@
         </div>
       </div>
     </div>
-    <div class="navbar-menu-icon-container">
-      <div class="navbar-menu-icon" (click)="toggleMobileNav()">
+    <div class="navbar-menu-icon-container" (click)="toggleMobileNav()">
+      <div class="navbar-menu-icon">
         <div class="bar bar1"></div>
         <div class="bar bar2"></div>
         <div class="bar bar3"></div>
