--- a/tth-client/src/app/shared/header/header.component.scss
+++ b/tth-client/src/app/shared/header/header.component.scss
@@ -55,14 +55,15 @@
         }
     }
     .navbar-menu-icon-container {
-        @include transition(background-color 0.5s ease);        
+        @include transition(background-color 0.5s ease);   
+        &:hover {
+            cursor: pointer;
+            background-color: #eb484d;                            
+        }     
         .navbar-menu-icon {
             width: 35px;
             float: right;
             z-index: 99;                   
-            &:hover {
-                cursor: pointer;
-            }
             .bar {
                 height: 2px;
                 width: 35px;                
