:lipstick: Make main page responsive

--- a/tth-client/src/app/main-page/main-page-section/main-page-section.component.scss
+++ b/tth-client/src/app/main-page/main-page-section/main-page-section.component.scss
@@ -2,7 +2,7 @@
 
 $main-page-text-color: #fff;
 
-.parallaxSection {
+.main-page-section {
     position: relative;
     opacity: 0.8;
     background-attachment: fixed;
@@ -10,39 +10,54 @@ $main-page-text-color: #fff;
     background-repeat: no-repeat;
     background-size: cover;
     min-height: 100%;
+    .main-page-section-container {
+        position: absolute;
+        top: 30%;
+        width: 100%;
+
+        .main-page-section-content {
+            left: 0;
+            text-align: center;
+            color: $main-page-text-color;
+            background-color: rgba(77, 77, 77, 0.5);
+            max-width: 1000px;
+            margin: auto;
+            // margin: auto 130px;
+            // padding: 10px;
+            padding: 30px;
+        
+            .main-page-section-caption {
+                border: 2px solid $main-text-color;
+                padding: 10px;
+                font-size: 20px;                
+                letter-spacing: 10px;
+                margin: 20px;
+                text-transform: uppercase;
+                text-decoration: none;
+                color: $main-page-text-color;
+            }
+        
+            .main-page-section-description {
+                // margin: auto 15px;
+                font-size: 14px;
+                padding-top: 20px;
+            }
+        }
+    }
 }
 
-.container {
-    position: absolute;
-    top: 30%;
-    width: 100%;
-
-    .content {
-        left: 0;
-        text-align: center;
-        color: $main-page-text-color;
-        background-color: rgba(77, 77, 77, 0.5);
-        max-width: 1000px;
-        margin: auto;
-        // margin: auto 130px;
-        // padding: 10px;
-        padding: 30px;
-    
-        .caption {
-            border: 2px solid $main-text-color;
-            padding: 18px;
-            font-size: 30px;
-            letter-spacing: 10px;
-            margin: 20px;
-            text-transform: uppercase;
-            text-decoration: none;
-            color: $main-page-text-color;
-        }
-    
-        .description {
-            // margin: auto 15px;
-            font-size: 20px;
-            padding-top: 20px;
+@media (min-width: $media-breakpoint-md) {
+    .main-page-section {
+        .main-page-section-container {
+            .main-page-section-content {
+                .main-page-section-caption {
+                    font-size: 30px;  
+                    padding: 18px;                    
+                }
+                .main-page-section-description {
+                    font-size: 20px;
+                }
+            }
         }
     }
 }
