--- a/tth-client/src/app/main-page/main-page-section/main-page-section.component.html
+++ b/tth-client/src/app/main-page/main-page-section/main-page-section.component.html
@@ -1,9 +1,9 @@
-<div class="main-page-section" class="{{section.cssClass}} parallaxSection" [ngStyle]="getBackgroundStyle(section.image)">
-  <div class="container">
-    <div class="content">
-      <a *ngIf="section.routerLink" routerLink="/{{section.routerLink}}" class="caption">{{section.title}}</a>
-      <div *ngIf="!section.routerLink" class="caption">{{section.title}}</div>
-      <p class="description">
+<div class="{{section.cssClass}} main-page-section" [ngStyle]="getBackgroundStyle(section.image)">
+  <div class="main-page-section-container">
+    <div class="main-page-section-content">
+      <a *ngIf="section.routerLink" routerLink="/{{section.routerLink}}" class="main-page-section-caption">{{section.title}}</a>
+      <div *ngIf="!section.routerLink" class="main-page-section-caption">{{section.title}}</div>
+      <p class="main-page-section-description">
         {{section.description}}
       </p>
     </div>
