--- a/tth-client/src/app/sites/current/current.component.html
+++ b/tth-client/src/app/sites/current/current.component.html
@@ -1,10 +1,17 @@
-<div class="header-image" [ngStyle]="getBackgroundStyle(backgroundImage)"></div>
-<div class="content">
-  <div *ngFor="let post of posts" class="post">
-    <h2 [innerHTML]='post.title'></h2>
-    <div [innerHTML]='post.description'></div>
-    <div *ngFor="let image of post.images" class='post-image-container'>
-      <img src={{getFileSrc(image)}} class='post-image'/>
+<div class="current-container">
+  <div class="header-image" [ngStyle]="getBackgroundStyle(backgroundImage)">
+    <div class="header-image-title">
+      <h1>Aktuelles</h1>
+    </div>
+  </div>
+  <div class="blog-posts">
+    <div *ngFor="let post of posts" class="post-container">
+      <div class="post">
+        <div class="post-image-container" [ngStyle]="getPostImageBackgroundStyle(post)">
+        </div>
+        <h2 [innerHTML]='post.title' class="post-heading"></h2>
+        <div [innerHTML]='post.description'></div>
+      </div>
     </div>
   </div>
 </div>
