--- a/tth-client/src/app/sites/current/current.component.scss
+++ b/tth-client/src/app/sites/current/current.component.scss
@@ -1,54 +1,77 @@
 @import '../../../variables';
 @import '../../../mixins';
 
-.content {
-    background-color: $main-text-color;
-    padding: 10px;
+$postBorderColor: #e1e1e1;
 
-    .post {
-        // background-color: #303030;
+.current-container {
+    background-color: #fff;        
+}
+
+.blog-posts {
+    padding: 20px;
+    .post-container {   
         color: #303030;
         opacity: 0.85;
-        padding: 30px 0 70px;
-        margin: 0 70px;
-        border-bottom: 1px solid $post-seperator-color;
-        .post-image-container {
-
-            .post-image {
-                width: 100%;
+        padding-bottom: 50px;        
+        .post {
+            .post-image-container {
+                height: 300px;
+                background-size: cover;
+                background-color: $postBorderColor;
+            }
+            .post-heading {
+                margin: 5px 0 5px 0;
             }
         }
     }
 }
 
-.team-member-content-container {
-
-    .team-member-description-container {
-        display: block;
-    }
-
-    .team-member-picture-frame {
-        background-size: 100% 100%;
-        margin-right: 20px;
-        width: 70%;
-        height: auto;
-        display: block;
+@media (min-width: $media-breakpoint-md){
+    .blog-posts {
+        padding: 50px;        
+        @include flexbox();
+        @include flex-wrap(wrap);
+        .post-container {
+            @include flex-grow(1);
+            @include flexbox();
+            @include flex-direction(column);
+            padding-bottom: 0;
+            display: inline-block;
+            width: 49%;
+            border-bottom: 1px solid $postBorderColor; 
+            .post {
+                padding-bottom: 50px;
+                padding-top: 50px;
+            }
+            &:nth-child(odd) {
+                border-right: 1px solid $postBorderColor;            
+                .post {
+                    padding-right: 50px;
+                }
+            }
+            &:nth-child(even) {
+                .post {
+                    padding-left: 50px;
+                }
+            }
+            &:nth-child(-n+2) {
+                .post {
+                    padding-top: 0;
+                }
+            }
+            &:nth-last-child(-n+2) {
+                border-bottom: none;            
+                .post {
+                    padding-bottom: 0;            
+                }
+            }
+        }
     }
 }
 
-@media (min-width: $media-breakpoint-md){
-    .team-member-content-container {
-        @include flexbox();
-    
-        .team-member-description-container {
-            @include flex(1);
-        }
-    
-        .team-member-picture-frame {
-            background-size: 100% 100%;
-            height: 500px;
-            width: 350px;
-            margin-right: 20px;
-        }
+@media (min-width: $media-breakpoint-lg){
+    .blog-posts {
+        max-width: $media-breakpoint-lg;
+        margin: 100px auto;
     }
 }
