--- a/tth-client/src/styles.scss
+++ b/tth-client/src/styles.scss
@@ -19,6 +19,24 @@ body, html {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    .header-image-title {
+        position: absolute;
+        top: 50%;
+        width: 100%;
+        text-align: center;
+        text-transform: uppercase;
+        color: #fff;
+        h1 {
+            display: inline-block;
+            padding: 10px 30px;
+            background-color: rgba(#000, 0.6);
+            margin: 0;            
+        }
+    }
+}
+
+app-current {
+    background-color: #c7c7c7;        
 }
 
 @media (min-width: $media-breakpoint-md) {
