--- a/tth-client/src/app/sites/courses/courses.component.html
+++ b/tth-client/src/app/sites/courses/courses.component.html
@@ -1,4 +1,9 @@
-<div class="header-image" [ngStyle]="getBackgroundStyle(backgroundImage)"></div>
+<div class="header-image" [ngStyle]="getBackgroundStyle(backgroundImage)">
+    <div class="header-image-title">
+      <h1>Kurse</h1>
+    </div>
+</div>
+<app-courses-overview></app-courses-overview>
 <div class="content">
   <h2>Übersicht</h2>
 </div>
