--- a/tth-client/src/app/main-page/main-page.component.scss
+++ b/tth-client/src/app/main-page/main-page.component.scss
@@ -15,6 +15,6 @@ div {
         top: 0;
         left: 0;
         width: 100%;
-        height: 100%;
+        height: calc(100% - 70px);
     }
 }
