--- a/tth-client/src/mixins.scss
+++ b/tth-client/src/mixins.scss
@@ -24,6 +24,14 @@
           border-radius: $radius;
 }
 
+@mixin transform($transforms) {
+  -moz-transform: $transforms;
+    -o-transform: $transforms;
+   -ms-transform: $transforms;
+-webkit-transform: $transforms;
+       transform: $transforms;
+}
+
 // --------------------------------------------------
 // Flexbox SASS mixins
 // The spec: http://www.w3.org/TR/css3-flexbox
