:sparkles: Redesign stage component

--- a/tth-client/src/app/courses-overview/courses-overview.component.scss
+++ b/tth-client/src/app/courses-overview/courses-overview.component.scss
@@ -75,7 +75,7 @@
                     }
                 }
                 &:hover {
-                    background-color: #eb484d;
+                    background-color: $accent-color-1;
                     padding-left: 30px;
                 } 
             }
