--- a/tth-client/src/app/shared/header/header.component.html
+++ b/tth-client/src/app/shared/header/header.component.html
@@ -25,7 +25,7 @@
       <a class="navbar-navigation-link" routerLink="/kurse" (click)="toggleMobileNav()">
         Kurse
       </a> 
-      <a class="navbar-navigation-link" routerLink="/buehne" (click)="toggleMobileNav()">
+      <a class="navbar-navigation-link" routerLink="/auftritte" (click)="toggleMobileNav()">
         Bühne
       </a>
       <a class="navbar-navigation-link" routerLink="/team" (click)="toggleMobileNav()">
