--- a/tth-client/src/variables.scss
+++ b/tth-client/src/variables.scss
@@ -5,7 +5,9 @@
 $header-link-color: #f2f2f2;
 $header-hover-background-color: #595959;
 $main-text-color: #F6F5F5;
+$main-text-color-on-dark-bg: #fff;
 $post-seperator-color: #8C8C8C;
+$accent-color-1: #eb484d;
 
 /*---------------------------
 |   RESPONSIVE BREAKPOINTS  |
