--- a/tth-client/src/app/sites/stage/stage.component.scss
+++ b/tth-client/src/app/sites/stage/stage.component.scss
@@ -7,53 +7,84 @@
 
 .performances-container {
     background-color: $main-text-color;
-    padding: 10px;
-
-    .posts {
-        // background-color: #303030;
-        color: #303030;
-        opacity: 0.85;
-        padding: 30px 0 70px;
-        margin: 0 70px;
-        border-bottom: 1px solid $post-seperator-color;
-    }
-}
-
-.team-member-content-container {
-
-    .team-member-description-container {
-        display: block;
-    }
-
-    .team-member-picture-frame {
-        background-size: 100% 100%;
-        margin-right: 20px;
-        width: 70%;
-        height: auto;
-        display: block;
-        border: solid black 3px;
-        -webkit-transition-duration: 0.3s; /* Safari */
-        transition-duration: 0.3s;
-    }
-    .team-member-picture-frame:hover {
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 25px 0 rgba(0, 0, 0, 0.3);
-        cursor: pointer;
-    }
-}
-
-@media (min-width: $media-breakpoint-md){
-    .team-member-content-container {
-        @include flexbox();
-    
-        .team-member-description-container {
-            @include flex(1);
+    @include flexbox();
+    @include flex-wrap(wrap);
+    width: 100%;
+    background-color: #000;
+    .performance-poster-container {
+        width: 100%;
+        background-size: cover;
+        position: relative;
+        
+        text-decoration: none; 
+        @include flexbox();  
+        .performance-poster-mask {
+            display: none;
         }
-    
-        .team-member-picture-frame {
-            background-size: 100% 100%;
-            height: 500px;
-            width: 350px;
-            margin-right: 20px;
+        .performance-poster-title {
+            opacity: 1;
+            text-transform: uppercase;
+            font-size: 36px;
+            font-style: italic;
+            color: $main-text-color-on-dark-bg;
+            width: 100%;
+            background-color: transparent;
+            @include transition(
+                opacity 0.3s ease,
+                background-color 0.3s ease,
+                padding 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275)
+            );
+        }
+        &:hover {
+            .performance-poster-mask {
+                background-color: rgba(#000, 0.5);;
+            }
+            .performance-poster-title {
+                //opacity: 0;
+                background-color: $accent-color-1;
+            }
+        }
+    }
+}
+
+@media (max-width: $media-breakpoint-md) {
+    .performances-container {
+        padding: 50px 0;
+        .performance-poster-container {
+            background-image: none !important;
+            .performance-poster-title {
+                padding: 15px 0 15px 50px;                
+            }
+            &:hover {
+                .performance-poster-title {
+                    padding-left: 70px;
+                }
+            }
+        }
+    }
+}
+
+@media (min-width: $media-breakpoint-md) {
+    .performances-container {
+        .performance-poster-container {
+            width: 33.33%;
+            height: 600px;
+            align-items: center;
+            justify-content: center;
+            .performance-poster-mask {
+                display: block;
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                background-color: rgba(#000, 0.85);
+                @include transition(
+                    background-color 0.3s ease
+                );
+            }
+            .performance-poster-title {
+                text-align: center;
+                z-index: 1;                
+            }
         }
     }
 }
