:bug: Fix deployment bugs and temporarily switch to english for headings

--- a/tth-client/src/app/shared/header/header.component.html
+++ b/tth-client/src/app/shared/header/header.component.html
@@ -17,25 +17,25 @@
     </div>
     <div class="navbar-navigation">
       <a class="navbar-navigation-link home-link" routerLink="/" (click)="toggleMobileNav()">
-          Übersicht
+        &Uuml;bersicht
         </a>
       <a class="navbar-navigation-link" routerLink="/aktuelles" (click)="toggleMobileNav()">
-        Aktuelles
+        News
       </a>
       <a class="navbar-navigation-link" routerLink="/kurse" (click)="toggleMobileNav()">
-        Kurse
+        Courses
       </a> 
       <a class="navbar-navigation-link" routerLink="/auftritte" (click)="toggleMobileNav()">
-        Bühne
+        Performances
       </a>
       <a class="navbar-navigation-link" routerLink="/team" (click)="toggleMobileNav()">
         Team
       </a>
       <a class="navbar-navigation-link" routerLink="/locations" (click)="toggleMobileNav()">
-        Standorte
+        Locations
       </a>
       <a class="navbar-navigation-link" routerLink="/contact" (click)="toggleMobileNav()">
-        Kontakt
+        Contact
       </a>
     </div>
   </div>
