--- a/tth-client/src/app/sites/current/current.component.html
+++ b/tth-client/src/app/sites/current/current.component.html
@@ -1,7 +1,7 @@
 <div class="current-container">
   <div class="header-image" [ngStyle]="getBackgroundStyle(backgroundImage)">
     <div class="header-image-title">
-      <h1>Aktuelles</h1>
+      <h1>News</h1>
     </div>
   </div>
   <div class="blog-posts">
