--- a/tth-client/src/app/sites/courses/courses.component.html
+++ b/tth-client/src/app/sites/courses/courses.component.html
@@ -1,17 +1,17 @@
 <div class="header-image" [ngStyle]="getBackgroundStyle(backgroundImage)">
     <div class="header-image-title">
-      <h1>Kurse</h1>
+      <h1>Courses</h1>
     </div>
 </div>
 <app-courses-overview></app-courses-overview>
 <div class="content">
-  <h2>Übersicht</h2>
+  <h2>&Uuml;bersicht</h2>
 </div>
 <div class="content" [innerHTML]='text'>
   
 </div>
 <div class="content">
-  <h2>vollständige Stundenpläne</h2>
+  <h2>vollst&auml;ndige Stundenpl&auml;ne</h2>
   <object type="application/pdf" data="assets/StundenplanMKG.pdf" class="schedule"></object>
   <object type="application/pdf" data="assets/StundenplanLB.pdf" class="schedule"></object>
 </div>
