:lipstick: Minor style changes for presentation

--- a/tth-client/src/app/shared/footer/footer.component.html
+++ b/tth-client/src/app/shared/footer/footer.component.html
@@ -1,7 +1,7 @@
 <div class="footer">
     <div class="footer-section footer-contact-container">
       <div class="footer-section-heading">
-        Kontakt
+        Contact
       </div>
       <div class="footer-section-content" *ngIf="locationMG && email">
         <span class="footer-section-content-link">{{locationMG.addressName}}</span>
@@ -33,7 +33,7 @@
       </div>
     <div class="footer-section footer-legal-container">
       <div class="footer-section-heading">
-          Impressum
+          Disclaimer
       </div>
       <div class="footer-section-content">  
         <div class="footer-section-content-link">Copyright by Tanztheater Anita Hanke 2017</div>
