--- a/tth-client/src/app/shared/header/header.component.html
+++ b/tth-client/src/app/shared/header/header.component.html
@@ -17,25 +17,25 @@
     </div>
     <div class="navbar-navigation">
       <a class="navbar-navigation-link home-link" routerLink="/" (click)="toggleMobileNav()">
-        &Uuml;bersicht
-        </a>
-      <a class="navbar-navigation-link" routerLink="/aktuelles" (click)="toggleMobileNav()">
-        News
+        Home
       </a>
       <a class="navbar-navigation-link" routerLink="/kurse" (click)="toggleMobileNav()">
         Courses
       </a> 
+      <a class="navbar-navigation-link" routerLink="/aktuelles" (click)="toggleMobileNav()">
+        News
+      </a>
       <a class="navbar-navigation-link" routerLink="/auftritte" (click)="toggleMobileNav()">
         Performances
       </a>
       <a class="navbar-navigation-link" routerLink="/team" (click)="toggleMobileNav()">
         Team
       </a>
-      <a class="navbar-navigation-link" routerLink="/locations" (click)="toggleMobileNav()">
+      <!--<a class="navbar-navigation-link" routerLink="/locations" (click)="toggleMobileNav()">
         Locations
-      </a>
-      <a class="navbar-navigation-link" routerLink="/contact" (click)="toggleMobileNav()">
+      </a>-->
+      <!--<a class="navbar-navigation-link" routerLink="/contact" (click)="toggleMobileNav()">
         Contact
-      </a>
+      </a>-->
     </div>
   </div>
