--- a/tth-client/src/app/sites/stage/stage.component.scss
+++ b/tth-client/src/app/sites/stage/stage.component.scss
@@ -25,6 +25,8 @@
             opacity: 1;
             text-transform: uppercase;
             font-size: 36px;
+            line-height: 40px;
+            padding: 10px;
             font-style: italic;
             color: $main-text-color-on-dark-bg;
             width: 100%;
