--- a/tth-client/src/app/sites/team/team.component.scss
+++ b/tth-client/src/app/sites/team/team.component.scss
@@ -1,48 +1,115 @@
 @import '../../../variables';
 @import '../../../mixins';
 
-.team-member-content {
-    background-color: $main-text-color;
-    padding: 10px;
-
-    .posts {
-        // background-color: #303030;
-        color: #303030;
-        opacity: 0.85;
-        padding: 30px 0 70px;
-        margin: 0 70px;
-        border-bottom: 1px solid $post-seperator-color;
-    }
-}
-
-.team-member-content-container {
-
-    .team-member-description-container {
-        display: block;
-    }
-
-    .team-member-picture-frame {
-        background-size: 100% 100%;
-        margin-right: 20px;
-        width: 70%;
-        height: auto;
-        display: block;
-    }
-}
-
-@media (min-width: $media-breakpoint-md){
-    .team-member-content-container {
-        @include flexbox();
-    
-        .team-member-description-container {
-            @include flex(1);
+.team-container {
+    width: 100%;
+    margin: 50px 0;
+    @include flexbox();
+    @include flex-wrap(wrap);
+    .team-member-container {
+        width: 100%;
+        position: relative;
+        padding: 20px;
+        .team-member-card {
+            @include flexbox();
+            @include flex-direction(column);
+            display: relative;
+            width: 320px;
+            margin: 0 auto;
+            background-color: #F6F5F5;
+            overflow: hidden;
+            .team-member-bg-container {
+                height: 300px;
+                width: 320px;
+                background-color: grey;
+                background-size: cover;
+                @include flexbox();
+                @include flex-direction(column);
+                align-items: center;
+                justify-content: center;
+                position: relative;
+                filter: blur(0px);                
+                @include transition(
+                    filter 0.2s ease-in-out             
+                );
+                .team-member-bg-mask {
+                    width: 320px;
+                    height: 100%;
+                    top: 0;
+                    background-color: transparent;
+                    position: absolute;
+                    @include transition(
+                        background-color 0.2s ease-in-out
+                    );
+                }
+                .team-member-about-me-tag {
+                    text-align: center;
+                    opacity: 0;
+                    color: #fff;
+                    padding: 10px 20px;
+                    background-color: $accent-color-1;
+                    z-index: 1;
+                    text-transform: uppercase;
+                    font-size: 20px;
+                    @include transition(
+                        opacity 0.2s ease-in-out
+                    );
+                }
+            }
+            .team-member-tag {
+                width: 300px;
+                height: 100px;
+                overflow: hidden;
+                text-align: center;
+                padding: 10px;
+                @include flexbox();
+                @include flex-direction(column);
+                .team-member-tag-name {
+                    font-size: 22px;
+                    line-height: 24px;
+                    font-weight: 600;
+                    font-style: italic;
+                    text-transform: uppercase;
+                }
+                .team-member-tag-task {
+                    font-size: 12px;
+                }
+            }
+            &:hover {
+                cursor: pointer;
+                .team-member-bg-container {
+                    //filter: blur(4px);                    
+                    .team-member-bg-mask {
+                        background-color: rgba(#000, 0.8);
+                    }
+                    .team-member-about-me-tag {
+                        opacity: 1;
+                    }
+                }
+            }
         }
-    
-        .team-member-picture-frame {
-            background-size: 100% 100%;
-            height: 500px;
-            width: 350px;
-            margin-right: 20px;
+    }
+}
+
+@media (min-width: 650px){
+    .team-container { 
+        .team-member-container {
+            width: 49%;
+            padding: 20px 0;
+            .team-member-card {
+                .team-member-bg-container {
+                }
+                .team-member-tag {
+                }
+            }
+        }
+    }
+}
+
+@media (min-width: 1000px){
+    .team-container { 
+        .team-member-container {
+            width: 33.3%;
         }
     }
 }
