--- a/tth-client/src/app/courses-overview/courses-overview.component.scss
+++ b/tth-client/src/app/courses-overview/courses-overview.component.scss
@@ -18,6 +18,7 @@
             padding: 10px;
             border-bottom: 1px solid #fff;
             overflow: hidden;
+            text-decoration: none;
             @include transition(
                 background-color 0.3s ease,
                 padding 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275)
