:sparkles: Add course details subpage

--- a/tth-client/src/app/courses-overview/courses-overview.component.html
+++ b/tth-client/src/app/courses-overview/courses-overview.component.html
@@ -7,7 +7,7 @@
     </div>
   </div>
   <div class="course-tags-container">
-    <a *ngFor="let course of courses" class="course-tag-container" (mouseenter)="mouseEnter(course)" (mouseleave)="mouseLeave(course)">
+    <a *ngFor="let course of courses, let i = index" class="course-tag-container" (mouseenter)="mouseEnter(course)" (mouseleave)="mouseLeave(course)" [routerLink]="['/kurse', i]">
       <div class="black-bg-mask">
         <div class="home-thumb-black-bg">
 
