:lipstick: Change language back to German

--- a/tth-client/src/app/shared/header/header.component.html
+++ b/tth-client/src/app/shared/header/header.component.html
@@ -20,22 +20,22 @@
         Home
       </a>
       <a class="navbar-navigation-link" routerLink="/kurse" (click)="toggleMobileNav()">
-        Courses
+        Kurse
       </a> 
       <a class="navbar-navigation-link" routerLink="/aktuelles" (click)="toggleMobileNav()">
-        News
+        Neuigkeiten
       </a>
       <a class="navbar-navigation-link" routerLink="/auftritte" (click)="toggleMobileNav()">
-        Performances
+        Auftritte
       </a>
       <a class="navbar-navigation-link" routerLink="/team" (click)="toggleMobileNav()">
         Team
       </a>
-      <!--<a class="navbar-navigation-link" routerLink="/locations" (click)="toggleMobileNav()">
-        Locations
-      </a>-->
-      <!--<a class="navbar-navigation-link" routerLink="/contact" (click)="toggleMobileNav()">
-        Contact
-      </a>-->
+      <a class="navbar-navigation-link" routerLink="/locations" (click)="toggleMobileNav()">
+        Standorte
+      </a>
+      <a class="navbar-navigation-link" routerLink="/contact" (click)="toggleMobileNav()">
+        Kontakt
+      </a>
     </div>
   </div>
